--- a/public/404.html
+++ b/public/404.html
@@ -1,3 +1,7 @@
-<script>
-    location.replace('/');
-</script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; URL=/" />
+  </head>
+  <body></body>
+</html>
